# RPent

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: sync-upstream.yml
cli/: __init__.py  main.py
deployment/rlinf/: env_server.py  vla_server.py
docs/: Makefile  README.md  autobuild.sh  requirements.txt
docs/source-en/: .readthedocs.yaml  conf.py  index.rst
docs/source-en/_static/: versions.json
docs/source-en/_static/js/: theme-toggle.js
docs/source-en/_templates/: global-sidebar-nav.html  language-switcher.html  sidebar-brand.html  sidebar-tools.html
docs/source-en/rst_source/: installation.rst  quickstart.rst
docs/source-en/rst_source/awesome_works/: harnessvla.rst
docs/source-en/rst_source/development/: add_primitive.rst  add_robot.rst  architecture.rst  memory.rst
docs/source-en/rst_source/extending/: new_env.rst
docs/source-en/rst_source/usage/: advanced_deployment.rst  configure_planner.rst  configure_primitives.rst  libero.rst  robocasa.rst
docs/source-zh/: .readthedocs.yaml  conf.py  index.rst
docs/source-zh/_static/: versions.json
docs/source-zh/_static/css/: custom.css
docs/source-zh/_static/js/: lang-switcher.js  sidebar-nav.js  version-switcher.js
docs/source-zh/_templates/: language-switcher.html  layout.html
docs/source-zh/rst_source/: installation.rst  overview.rst  quickstart.rst
docs/source-zh/rst_source/awesome_works/: harnessvla.rst
docs/source-zh/rst_source/development/: add_primitive.rst  add_robot.rst  architecture.rst  memory.rst
docs/source-zh/rst_source/extending/: new_env.rst
docs/source-zh/rst_source/usage/: advanced_deployment.rst  configure_planner.rst  configure_primitives.rst  libero.rst  robocasa.rst
physical_agent/backends/rlinf/: primitives.py
physical_agent/cerebrum/: __init__.py  base.py  claude_code.py  codex.py  openai_compat.py
physical_agent/cerebrum/adapters/: anthropic.py  base.py  openai_compat.py
physical_agent/cerebrum/mcp/: mcp.py
physical_agent/context/: __init__.py  libero_prompts.py  prompt_base.py
physical_agent/context/guides/: PRO_HYBRID_GUIDE.md  STRICT_HYBRID_GUIDE.md  STRICT_HYBRID_GUIDE_PERCEPTION.md  env_calibration.md
physical_agent/context/prompts/: __init__.py  claude_code.md  claude_code_perception.md  initial_user.md  perception_user.md
physical_agent/envs/: ADD_A_NEW_ENV.md  ADD_A_NEW_ENV.zh.md  __init__.py  base.py  env_spec.py  prompt_bundle.py  registry.py
physical_agent/envs/libero/: README.md  __init__.py  libero_env_client.py  prompt_bundle.py  toolkit.py  tools.py
physical_agent/envs/libero/guides/: env_calibration.md  pro_hybrid_guide.md  strict_hybrid_guide.md
physical_agent/envs/libero/prompts/: shared.py  system.py
physical_agent/rpc_driver/: __init__.py  base.py  socket.py  vla_client.py
physical_agent/tools/: __init__.py  common.py  toolkit.py
physical_agent/utils/: __init__.py  config.py  logging.py  templates.py
physicalagent/: config.py
physicalagent/apps/libero/: parallel_launch.py  runner.py
physicalagent/cerebrum/: __init__.py  openai_compat.py
physicalagent/tools/: repl.py
robots/libero/: __init__.py  env_server.py  prompt_bundle.py  sam3_server.py  toolkit.py  tools.py  vla_server.py
robots/libero/guides/: strict_hybrid_guide.md
robots/libero/prompts/: __init__.py  system.py  user.py
rpent/cli/: main.py
rpent/context/: prompt_utils.py
rpent/dashboard/: state.py
rpent/envs/: __init__.py  base.py  env_spec.py
rpent/planner/: api_loop.py  claude_code.py
rpent/utils/: __init__.py  config.py  daemon.py  http_rpc.py  resources.py  rpc.py  sam3_client.py  socket_rpc.py  vla_client.py
scripts/: install_libero_pro_plus.sh  liberopro_register_perturbations.patch  sync_claude_code_memory.sh
scripts/sam3/: README.md  run_sam3_server.sh
tests/cerebrum/: test_openai_compat.py
